--- a/src/components/styles/SolvedCategory.css
+++ b/src/components/styles/SolvedCategory.css
@@ -1,35 +1,35 @@
 :root {
-	--solved-bg: #efefe6;
-	--solved-color: #000;
-	--solved-disabled-opacity: 0.5;
-	--solved-active-scale: 0.95;
+	--straightforward-color: rgb(249, 223, 109);
+	---easy-color: rgb(160, 195, 90);
+	---medium-color: rgb(176, 196, 239); 
+	---tricky-color: rgb(186, 129, 197); 
 }
 
 .dark-mode {
-	--solved-bg: #333;
-	--solved-color: #fff;
-	--solved-disabled-opacity: 0.3;
-	--solved-active-scale: 0.9;
+	--straightforward-color: rgb(134, 134, 17);
+	---easy-color: rgb(44, 125, 20);
+	---medium-color: rgb(78, 92, 127); 
+	---tricky-color: rgb(147, 95, 158); 
 }
 
 /* straightforward */
 .solvedCategory[data-category='1'] {
-	background-color: rgb(249, 223, 109); 
+	background-color: var(--straightforward-color); 
 }
 
 /* easy */
 .solvedCategory[data-category='2'] {
-	background-color: rgb(160, 195, 90);
+	background-color: var(---easy-color);
 }
 
 /* medium */
 .solvedCategory[data-category='3'] {
-	background-color: rgb(176, 196, 239); 
+	background-color: var(---medium-color); 
 }
 
 /* tricky */
 .solvedCategory[data-category='4'] { 
-	background-color: rgb(186, 129, 197); 
+	background-color: var(---tricky-color); 
 }
 
 .solvedCategory {
